@@ -3348,17 +3348,17 @@ function of two arguments or it can be a matrix giving a sesquilinear form.
          </listitem>
         </varlistentry>
 
-        <varlistentry id="gel-function-Fibbonachi">
-         <term>Fibbonachi</term>
+        <varlistentry id="gel-function-Fibonacci">
+         <term>Fibonacci</term>
          <listitem>
-          <synopsis>Fibbonachi (x)</synopsis>
+          <synopsis>Fibonacci (x)</synopsis>
           <para>Aliases: <function>fib</function></para>
           <para>
-	    Calculate <varname>n</varname>th fibbonachi number.  That
+	    Calculate <varname>n</varname>th fibonacci number.  That
 	    is the number defined recursively by
-	    <userinput>Fibbonachi(n) = Fibbonachi(n-1) + Fibbonachi(n-2)</userinput>
+	    <userinput>Fibonacci(n) = Fibonacci(n-1) + Fibonacci(n-2)</userinput>
 	    and 
-	    <userinput>Fibbonachi(1) = Fibbonachi(2) = 1</userinput>.
+	    <userinput>Fibonacci(1) = Fibonacci(2) = 1</userinput>.
 	  </para>
           <para>
 	    See
