@@ -1,3 +1,8 @@
+Thu Nov 29 10:34:41 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* help/C/gel-function-list.gel, lib/combinatorics/misc.gel:  Fix
+	  spelling of the Fibonacci function name.
+
 Tue Nov 20 23:20:58 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* Release 1.0.2
